tests/integration/snapshots/integration__sync__duplicate_sub_issues_filtered_from_remote.snap
---
source: tests/integration/sync.rs
expression: closed_content
---
- [x] Normal Closed Sub <!-- @mock_user https://github.com/o/r/issues/2 -->
		sub body
