tests/integration/snapshots/integration__sync__force_merge_--pull_--force.snap
---
source: tests/integration/sync.rs
expression: snapshot_issues_dir(&ctx)
---
//- /o/r/.meta.json
{
  "virtual_project": false,
  "next_virtual_issue_number": 0,
  "issues": {
    "1": {
      "timestamps": {
        "title": null,
        "description": null,
        "labels": null,
        "state": null,
        "comments": []
      }
    },
    "2": {
      "timestamps": {
        "title": null,
        "description": null,
        "labels": null,
        "state": null,
        "comments": []
      }
    },
    "3": {
      "timestamps": {
        "title": null,
        "description": null,
        "labels": null,
        "state": null,
        "comments": []
      }
    }
  }
}
//- /o/r/1_-_Parent_Issue/2_-_Local_Sub.md
- [ ] Local Sub <!-- @mock_user https://github.com/o/r/issues/2 -->
		local sub body
//- /o/r/1_-_Parent_Issue/3_-_Remote_Sub.md
- [ ] Remote Sub <!-- @mock_user https://github.com/o/r/issues/3 -->
		remote sub body
//- /o/r/1_-_Parent_Issue/__main__.md
- [ ] Parent Issue <!-- @mock_user https://github.com/o/r/issues/1 -->
		parent body
